# Appazoid-Project-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.json
.cmake/: CMakeLists.txt
.cmake/app/: CMakeLists.txt
Application/: CMakeLists.txt
Application/src/Layers/: MainLayer.cpp
app/src/: Application.cpp  Application.h
app/src/Layers/: MainLayer.h
scripts/: build.bat  build.py  generate_build_system.py
